--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -3,26 +3,55 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
+    "@angular/core": "^2.1.0",
+    "@angular/forms": "^2.1.0",
+    "@angular/http": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/router": "^3.1.0",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-beta.12",
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.0",
+    "awesome-typescript-loader": "^2.2.4",
+    "codelyzer": "^1.0.0-beta.2",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "path": "^0.12.7",
+    "postcss-loader": "^0.13.0",
     "progress-bar-webpack-plugin": "^1.9.0",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.4",
+    "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
+    "ts-helpers": "^1.1.2",
+    "tslint": "^3.15.1",
+    "tslint-loader": "^2.1.5",
+    "typedoc": "^0.5.0",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "webpack": "^2.1.0-beta.25"
   },
   "author": "Geraldine Golong <geraldinegolong@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf ../../../target/classes/static",
+    "watch": "webpack --watch --progress --profile",
+    "dev-build": "npm run clean && webpack --progress --profile --bail",
+    "postinstall": "typings install"
   }
 }
