--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -3,55 +3,42 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@angular/common": "^2.1.0",
-    "@angular/compiler": "^2.1.0",
-    "@angular/core": "^2.1.0",
-    "@angular/forms": "^2.1.0",
-    "@angular/http": "^2.1.0",
-    "@angular/platform-browser": "^2.1.0",
-    "@angular/platform-browser-dynamic": "^2.1.0",
-    "@angular/router": "^3.1.0",
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "angular2-template-loader": "^0.5.0",
-    "autoprefixer": "^6.5.0",
+    "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.2.4",
-    "codelyzer": "^1.0.0-beta.2",
     "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
-    "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "path": "^0.12.7",
-    "postcss-loader": "^0.13.0",
-    "progress-bar-webpack-plugin": "^1.9.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.15.0",
+    "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.4",
-    "shelljs": "^0.7.4",
+    "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
-    "ts-helpers": "^1.1.2",
-    "tslint": "^3.15.1",
-    "tslint-loader": "^2.1.5",
-    "typedoc": "^0.5.0",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.25"
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2",
+    "webpack": "^1.13.0",
+    "webpack-merge": "^0.14.0"
   },
   "author": "Geraldine Golong <geraldinegolong@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "clean": "rimraf ../../../target/classes/static",
-    "watch": "webpack --watch --progress --profile",
-    "dev-build": "npm run clean && webpack --progress --profile --bail",
+    "watch": "webpack --watch",
+    "dev-build": "rimraf dist && webpack --config config/webpack.dev.js --progress --profile --bail",
+    "prod-build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install"
   }
 }
