--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -11,7 +11,11 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.8",
+    "bootstrap": "^4.0.0-alpha.4",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.6.3",
+    "jquery": "^3.1.1",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25"
   },
@@ -30,6 +34,7 @@
     "style-loader": "^0.13.1",
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-merge": "^0.14.0"
   },
