--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -28,6 +28,8 @@
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
